--- a/configs/fluent-bit/fluent-bit-qnap.conf
+++ b/configs/fluent-bit/fluent-bit-qnap.conf
@@ -5,11 +5,13 @@
     Parsers_File /fluent-bit/etc/parsers.conf
     Parsers_File /fluentbit/parsers.conf
 
-# INPUT: Zeek logs
+# INPUT: Zeek logs (JSON via policy/tuning/json-logs)
 [INPUT]
     Name              tail
     Path              /logs/zeek/*.log
+    Exclude_Path      /logs/zeek/loaded_scripts.log,/logs/zeek/telemetry.log
     Tag               zeek.*
+    Parser            json
     Refresh_Interval  5
     Skip_Long_Lines   On
     DB                /fluentbit/state/zeek.db
