fix: update QNAP Fluent Bit config — dedicated indices, fix response buffer
Split single fluentbit-default output into three dedicated indices
(zeek, suricata, syslog) to match deployed config on smokehouse.
Set Buffer_Size to False (unlimited) to fix HTTP response buffer
overflow that was causing all Zeek flushes to fail (default 512KB
was too small for bulk API responses).

--- a/configs/fluent-bit/fluent-bit-qnap.conf
+++ b/configs/fluent-bit/fluent-bit-qnap.conf
@@ -9,12 +9,14 @@
 [INPUT]
     Name              tail
     Path              /logs/zeek/*.log
-    Exclude_Path      /logs/zeek/loaded_scripts.log,/logs/zeek/telemetry.log
+    Exclude_Path      /logs/zeek/loaded_scripts.log,/logs/zeek/telemetry.log,/logs/zeek/stats.log
     Tag               zeek.*
     Parser            json
     Refresh_Interval  5
     Skip_Long_Lines   On
+    Read_from_Head    Off
     DB                /fluentbit/state/zeek.db
+    Mem_Buf_Limit     10MB
 
 # INPUT: Suricata eve.json
 [INPUT]
@@ -24,7 +26,9 @@
     Parser            json
     Refresh_Interval  5
     Skip_Long_Lines   On
+    Read_from_Head    Off
     DB                /fluentbit/state/suricata_eve.db
+    Mem_Buf_Limit     10MB
 
 # INPUT: Syslog (TCP + UDP) on 5514
 [INPUT]
@@ -59,16 +63,47 @@
     Match           syslog.*
     Add             source syslog
 
-# OUTPUT: OpenSearch (GeoIP handled by index default_pipeline)
+# OUTPUT: Zeek → dedicated index
 [OUTPUT]
     Name            es
-    Match           *
+    Match           zeek.*
     Host            ${OPENSEARCH_HOST}
     Port            ${OPENSEARCH_PORT}
     HTTP_User       ${OPENSEARCH_USER}
     HTTP_Passwd     ${OPENSEARCH_PASS}
-    Index           fluentbit-default
-    Logstash_Format Off
+    Index           zeek
     Suppress_Type_Name On
     tls             On
     tls.verify      Off
+    Buffer_Size     False
+    Retry_Limit     5
+
+# OUTPUT: Suricata → dedicated index
+[OUTPUT]
+    Name            es
+    Match           suricata.*
+    Host            ${OPENSEARCH_HOST}
+    Port            ${OPENSEARCH_PORT}
+    HTTP_User       ${OPENSEARCH_USER}
+    HTTP_Passwd     ${OPENSEARCH_PASS}
+    Index           suricata
+    Suppress_Type_Name On
+    tls             On
+    tls.verify      Off
+    Buffer_Size     False
+    Retry_Limit     5
+
+# OUTPUT: Syslog → dedicated index
+[OUTPUT]
+    Name            es
+    Match           syslog.*
+    Host            ${OPENSEARCH_HOST}
+    Port            ${OPENSEARCH_PORT}
+    HTTP_User       ${OPENSEARCH_USER}
+    HTTP_Passwd     ${OPENSEARCH_PASS}
+    Index           syslog
+    Suppress_Type_Name On
+    tls             On
+    tls.verify      Off
+    Buffer_Size     False
+    Retry_Limit     5
