fix: update ml_scorer to query suricata index instead of fluentbit-default
ml_scorer.py had hardcoded 'fluentbit-default' index for alert scoring.
Now loads index name from config.yaml (ml_scoring.source_index), defaulting
to 'suricata' to match the new dedicated Fluent Bit output indices.

--- a/scripts/soc-automation/config/config.yaml
+++ b/scripts/soc-automation/config/config.yaml
@@ -134,6 +134,13 @@ digest:
       - recommendations
 
 # =============================================================================
+# ML SCORING SETTINGS
+# =============================================================================
+ml_scoring:
+  # OpenSearch index containing Suricata alerts to score
+  source_index: "suricata"
+
+# =============================================================================
 # ALERT THRESHOLDS
 # =============================================================================
 alerts:
