Batch ML scoring alerts into single Discord summary embed
Replace per-alert Discord notifications with a dashboard-style summary
that includes threat counts, score stats, top signatures/sources/targets,
and category breakdowns. Eliminates webhook rate limiting (was hitting
Discord 429s with 18+ embeds per batch). Also fix OpenSearch updates to
use each doc's actual index and expand source_index for backwards compat
with pre-migration fluentbit-default data.

--- a/scripts/soc-automation/config/config.yaml
+++ b/scripts/soc-automation/config/config.yaml
@@ -138,7 +138,8 @@ digest:
 # =============================================================================
 ml_scoring:
   # OpenSearch index containing Suricata alerts to score
-  source_index: "suricata"
+  # Comma-separated for backwards compat with pre-migration fluentbit-default data
+  source_index: "fluentbit-default,suricata"
 
 # =============================================================================
 # ALERT THRESHOLDS
